--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -7,6 +7,7 @@ server.port=8181
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
+#spring.datasource.url=jdbc:h2:mem:register-test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false
 spring.datasource.url=jdbc:h2:file:~/register-test
 spring.datasource.username=test
 spring.datasource.password=test
