--- a/src/integration-test/resources/application-test.properties
+++ b/src/integration-test/resources/application-test.properties
@@ -7,8 +7,7 @@ server.port=8181
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
-#spring.datasource.url=jdbc:h2:mem:register-test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false
-spring.datasource.url=jdbc:h2:file:~/register-test
+spring.datasource.url=jdbc:h2:mem:register-test;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false
 spring.datasource.username=test
 spring.datasource.password=test
 spring.datasource.driver-class-name=org.h2.Driver
@@ -20,12 +19,5 @@ spring.datasource.min-evictable-idle-time-millis=10000
 spring.datasource.min-idle=8
 spring.datasource.time-between-eviction-runs-millis=1
 
-flyway.baseline-on-migrate=true
-spring.jpa.hibernate.ddl-auto=false
-
-datasource.flyway.url=jdbc:h2:file:~/register-test
-datasource.flyway.username=test
-datasource.flyway.password=test
-datasource.flyway.driver-class-name=org.h2.Driver
-
-flyway.locations=classpath:test.db.migration
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=create-drop
