--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.port=8080
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
 
+#spring.datasource.url=jdbc:h2:mem:register;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false
 spring.datasource.url=jdbc:h2:file:~/register
 spring.datasource.username=root
 spring.datasource.password=root
@@ -17,10 +18,4 @@ spring.datasource.min-evictable-idle-time-millis=10000
 spring.datasource.min-idle=8
 spring.datasource.time-between-eviction-runs-millis=1
 
-flyway.baseline-on-migrate=true
-spring.jpa.hibernate.ddl-auto=false
-
-datasource.flyway.url=jdbc:h2:file:~/register
-datasource.flyway.username=root
-datasource.flyway.password=root
-datasource.flyway.driver-class-name=org.h2.Driver
+spring.jpa.hibernate.ddl-auto=update
