--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 logging.level.org.springframework.web=DEBUG
 
-#server.port=8080
-server.port=8181
+server.port=8080
+#server.port=8181
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
@@ -20,3 +20,7 @@ spring.datasource.min-idle=8
 spring.datasource.time-between-eviction-runs-millis=1
 
 spring.jpa.hibernate.ddl-auto=update
+
+#Actuator
+management.context-path=/manage
+management.security.enabled=false
