--- a/pom.xml
+++ b/pom.xml
@@ -48,10 +48,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-actuator</artifactId>
     </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-security</artifactId>
-    </dependency>
+    <!--<dependency>-->
+      <!--<groupId>org.springframework.boot</groupId>-->
+      <!--<artifactId>spring-boot-starter-security</artifactId>-->
+    <!--</dependency>-->
 
     <!--Test-->
     <dependency>
@@ -92,6 +92,12 @@
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
       <version>1.6</version>
+    </dependency>
+
+    <dependency>
+      <groupId>br.com.caelum.stella</groupId>
+      <artifactId>caelum-stella-core</artifactId>
+      <version>2.1.2</version>
     </dependency>
 
   </dependencies>
