--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,8 @@ spring.h2.console.path=/h2
 
 #spring.datasource.url=jdbc:h2:mem:register;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=false
 spring.datasource.url=jdbc:h2:file:~/register
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=dev
+spring.datasource.password=dev
 spring.datasource.driver-class-name=org.h2.Driver
 
 spring.datasource.max-active=8
@@ -23,4 +23,4 @@ spring.jpa.hibernate.ddl-auto=update
 
 #Actuator
 management.context-path=/manage
-management.security.enabled=false
+management.security.enabled=true
